--- a/Climbing Data Extraction.ipynb
+++ b/Climbing Data Extraction.ipynb
@@ -2,7 +2,70 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import datetime\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make a category lookup\n",
+    "def climbing_category(cat):\n",
+    "    categories = {\n",
+    "        '1': 'menLead',\n",
+    "        '2': 'womenLead',\n",
+    "        '5': 'womenBouldering',\n",
+    "        '6': 'menBouldering',\n",
+    "        '23': 'menSpeed',\n",
+    "        '24': 'womenSpeed'}\n",
+    "    return categories.get(cat, 'otherCategory')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get overall information for all competitions in a season\n",
+    "def add_season_competitions(url_json):\n",
+    "    new_rows = []\n",
+    "    for comp in url_json['competitions']:\n",
+    "        new_comp = dict()\n",
+    "        \n",
+    "        # Add a dictionary with the information for each comp\n",
+    "        new_comp.update({\n",
+    "            'compId': comp.get('WetId'),\n",
+    "            'longCompName': comp.get('name'),\n",
+    "            'shortCompName': comp.get('short'),\n",
+    "            'hostNation': comp.get('host_nation'),\n",
+    "            'openComp': comp.get('open_comp'),\n",
+    "            'dateStart': comp.get('date'),\n",
+    "            'dateEnd': comp.get('date_end')\n",
+    "        })\n",
+    "\n",
+    "        # Get all categories in this competition\n",
+    "        for cat in comp.get('cats'):\n",
+    "            new_comp.update({climbing_category(cat['GrpId']): 1})\n",
+    "\n",
+    "        # Append new row dictionary, (representing a comp), in the new_rows list\n",
+    "        new_rows.append(new_comp)  \n",
+    "    \n",
+    "    # Return all new rows for the season\n",
+    "    return new_rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
@@ -1341,16 +1404,12 @@
        "[955 rows x 14 columns]"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import requests\n",
-    "import datetime\n",
-    "import pandas as pd\n",
-    "\n",
     "# Today's date\n",
     "today = datetime.datetime.now()\n",
     "\n",
@@ -1369,326 +1428,6 @@
     "    competition_overview_df = competition_overview_df.append(add_season_competitions(season_json), ignore_index=True)\n",
     "\n",
     "competition_overview_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 231,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Make a category lookup\n",
-    "def climbing_category(cat):\n",
-    "    categories = {\n",
-    "        '1': 'menLead',\n",
-    "        '2': 'womenLead',\n",
-    "        '5': 'womenBouldering',\n",
-    "        '6': 'menBouldering',\n",
-    "        '23': 'menSpeed',\n",
-    "        '24': 'womenSpeed'}\n",
-    "    return categories.get(cat, 'otherCategory')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 223,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get overall information for all competitions in a season\n",
-    "def add_season_competitions(url_json):\n",
-    "    new_rows = []\n",
-    "    for comp in url_json['competitions']:\n",
-    "        new_comp = dict()\n",
-    "        \n",
-    "        # Add a dictionary with the information for each comp\n",
-    "        new_comp.update({\n",
-    "            'compId': comp.get('WetId'),\n",
-    "            'longCompName': comp.get('name'),\n",
-    "            'shortCompName': comp.get('short'),\n",
-    "            'hostNation': comp.get('host_nation'),\n",
-    "            'openComp': comp.get('open_comp'),\n",
-    "            'dateStart': comp.get('date'),\n",
-    "            'dateEnd': comp.get('date_end')\n",
-    "        })\n",
-    "\n",
-    "        # Get all categories in this competition\n",
-    "        for cat in comp.get('cats'):\n",
-    "            new_comp.update({climbing_category(cat['GrpId']): 1})\n",
-    "\n",
-    "        # Append new row dictionary, (representing a comp), in the new_rows list\n",
-    "        new_rows.append(new_comp)  \n",
-    "    \n",
-    "    # Return all new rows for the season\n",
-    "    return new_rows"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for competition_id in competition_ids:\n",
-    "    url = 'http://egw.ifsc-climbing.org/egw/ranking/json.php?'\n",
-    "    competition_id = competition_ids[-15]\n",
-    "    category = 5\n",
-    "    route = 3\n",
-    "    \n",
-    "    # Adding competition, category and route to url\n",
-    "    url = url + 'comp=' + str(competition_id) + '&cat=' + str(category) + '&route=' + str(route)\n",
-    "    comp_json = requests.get(url).json()\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'WetId': '6158',\n",
-       " 'GrpId': '5',\n",
-       " 'route_order': '3',\n",
-       " 'route_name': 'Final W O M E N bouldering',\n",
-       " 'route_judge': 'Matevz Gradisek, David Mora Garcia',\n",
-       " 'route_iso_open': '16.30',\n",
-       " 'route_iso_close': '17.30',\n",
-       " 'route_start': '18.30',\n",
-       " 'route_num_problems': '4',\n",
-       " 'route_climbing_time': '4 min.',\n",
-       " 'discipline': 'boulder',\n",
-       " 'comp_name': 'IFSC Climbing Worldcup (B) - Meiringen (SUI) 2017 ',\n",
-       " 'comp_date': '2017-04-07',\n",
-       " 'display_athlete': 'nation',\n",
-       " 'route_names': {'-1': 'General result',\n",
-       "  '0': '1. Qualification',\n",
-       "  '1': '2. Qualification',\n",
-       "  '2': 'Semi-Final',\n",
-       "  '3': 'Final'},\n",
-       " 'category_offical': True,\n",
-       " 'current': [],\n",
-       " 'participants': [{'PerId': '8247',\n",
-       "   'acl': '63',\n",
-       "   'birthyear': '1993',\n",
-       "   'boulder1': 't2 b2',\n",
-       "   'boulder2': 't1 b1',\n",
-       "   'boulder3': 't3 b3',\n",
-       "   'boulder4': 't4 b2',\n",
-       "   'checked': True,\n",
-       "   'city': 'Sheffield',\n",
-       "   'fed_id': '7',\n",
-       "   'fed_url': 'http://www.thebmc.co.uk/',\n",
-       "   'federation': 'British Mountaineering Council',\n",
-       "   'firstname': 'Shauna',\n",
-       "   'lastname': 'Coxsey',\n",
-       "   'nation': 'GBR',\n",
-       "   'rank_prev_heat': '3',\n",
-       "   'result': '4t10\\xa04b8',\n",
-       "   'result_modified': '1491675880',\n",
-       "   'result_rank': '1',\n",
-       "   'rkey': 'SCO07F',\n",
-       "   'start_number': '120',\n",
-       "   'start_order': '4',\n",
-       "   'url': 'https://www.ifsc-climbing.org/index.php?option=com_ifsc&view=athlete&id=8247&cat=5'},\n",
-       "  {'PerId': '5244',\n",
-       "   'acl': '63',\n",
-       "   'birthyear': '1987',\n",
-       "   'boulder1': 'b0',\n",
-       "   'boulder2': 't3 b3',\n",
-       "   'boulder3': 't3 b2',\n",
-       "   'boulder4': 'b8',\n",
-       "   'checked': True,\n",
-       "   'city': 'Innsbruck',\n",
-       "   'fed_id': '22',\n",
-       "   'fed_url': 'http://www.austriaclimbing.com',\n",
-       "   'federation': 'Kletterverband Österreich ',\n",
-       "   'firstname': 'Katharina',\n",
-       "   'lastname': 'Saurwein',\n",
-       "   'nation': 'AUT',\n",
-       "   'rank_prev_heat': '6',\n",
-       "   'result': '2t6\\xa03b13',\n",
-       "   'result_modified': '1491675884',\n",
-       "   'result_rank': '2',\n",
-       "   'rkey': 'KSA01F',\n",
-       "   'start_number': '124',\n",
-       "   'start_order': '1',\n",
-       "   'url': 'https://www.ifsc-climbing.org/index.php?option=com_ifsc&view=athlete&id=5244&cat=5'},\n",
-       "  {'PerId': '12039',\n",
-       "   'acl': '63',\n",
-       "   'birthyear': '1997',\n",
-       "   'boulder1': 'b0',\n",
-       "   'boulder2': 'b3',\n",
-       "   'boulder3': 't2 b1',\n",
-       "   'boulder4': 'b2',\n",
-       "   'checked': True,\n",
-       "   'city': 'Toshima-ku, Tokyo',\n",
-       "   'fed_id': '62',\n",
-       "   'fed_url': 'http://www.jma-sangaku.or.jp/',\n",
-       "   'federation': 'Japan Mountaineering & Sport Climbing Association',\n",
-       "   'firstname': 'Miho',\n",
-       "   'lastname': 'Nonaka',\n",
-       "   'nation': 'JPN',\n",
-       "   'rank_prev_heat': '1',\n",
-       "   'result': '1t2\\xa03b6',\n",
-       "   'result_modified': '1491675890',\n",
-       "   'result_rank': '3',\n",
-       "   'rkey': 'MNO13F',\n",
-       "   'start_number': '159',\n",
-       "   'start_order': '6',\n",
-       "   'url': 'https://www.ifsc-climbing.org/index.php?option=com_ifsc&view=athlete&id=12039&cat=5'},\n",
-       "  {'PerId': '10338',\n",
-       "   'acl': '127',\n",
-       "   'birthyear': '1997',\n",
-       "   'boulder1': 'b1',\n",
-       "   'boulder2': 'b0',\n",
-       "   'boulder3': 't3 b1',\n",
-       "   'boulder4': 'b1',\n",
-       "   'checked': True,\n",
-       "   'city': 'Nis',\n",
-       "   'fed_id': '347',\n",
-       "   'federation': 'Sport Climbing Federation of Serbia',\n",
-       "   'firstname': 'Stasa',\n",
-       "   'lastname': 'Gejo',\n",
-       "   'nation': 'SRB',\n",
-       "   'rank_prev_heat': '2',\n",
-       "   'result': '1t3\\xa03b3',\n",
-       "   'result_modified': '1491675914',\n",
-       "   'result_rank': '4',\n",
-       "   'rkey': 'SGE11F',\n",
-       "   'start_number': '163',\n",
-       "   'start_order': '5',\n",
-       "   'url': 'https://www.ifsc-climbing.org/index.php?option=com_ifsc&view=athlete&id=10338&cat=5'},\n",
-       "  {'PerId': '6367',\n",
-       "   'acl': '63',\n",
-       "   'birthyear': '1992',\n",
-       "   'boulder1': 'b0',\n",
-       "   'boulder2': 'b0',\n",
-       "   'boulder3': 't3 b2',\n",
-       "   'boulder4': 'b1',\n",
-       "   'checked': True,\n",
-       "   'city': 'Bonstetten',\n",
-       "   'fed_id': '4',\n",
-       "   'fed_parent': '4',\n",
-       "   'fed_url': 'http://www.sac-cas.ch',\n",
-       "   'federation': 'Schweizer Alpen Club',\n",
-       "   'firstname': 'Petra',\n",
-       "   'lastname': 'Klingler',\n",
-       "   'nation': 'SUI',\n",
-       "   'rank_prev_heat': '5',\n",
-       "   'result': '1t3\\xa02b3',\n",
-       "   'result_modified': '1491675921',\n",
-       "   'result_rank': '5',\n",
-       "   'rkey': 'PKL03F',\n",
-       "   'start_number': '121',\n",
-       "   'start_order': '2',\n",
-       "   'url': 'https://www.ifsc-climbing.org/index.php?option=com_ifsc&view=athlete&id=6367&cat=5'},\n",
-       "  {'PerId': '11989',\n",
-       "   'acl': '63',\n",
-       "   'birthyear': '1999',\n",
-       "   'boulder1': 'b0',\n",
-       "   'boulder2': 'b1',\n",
-       "   'boulder3': 'b0',\n",
-       "   'boulder4': 'b3',\n",
-       "   'checked': True,\n",
-       "   'city': 'Šmartno pri Slovenj Gradcu',\n",
-       "   'fed_id': '19',\n",
-       "   'fed_url': 'http://www.pzs.si/ksp',\n",
-       "   'federation': 'Alpine Association of Slovenia',\n",
-       "   'firstname': 'Janja',\n",
-       "   'lastname': 'Garnbret',\n",
-       "   'nation': 'SLO',\n",
-       "   'rank_prev_heat': '4',\n",
-       "   'result': '0t\\xa02b4',\n",
-       "   'result_modified': '1491675936',\n",
-       "   'result_rank': '6',\n",
-       "   'rkey': 'JGA13F',\n",
-       "   'start_number': '166',\n",
-       "   'start_order': '3',\n",
-       "   'url': 'https://www.ifsc-climbing.org/index.php?option=com_ifsc&view=athlete&id=11989&cat=5'}],\n",
-       " 'statistics': {'1': {'bonus': 2,\n",
-       "   'bonus_min': '1',\n",
-       "   'bonus_max': '2',\n",
-       "   'bonus_avg': 1.5,\n",
-       "   'top': 1,\n",
-       "   'top_min': '2',\n",
-       "   'top_max': '2',\n",
-       "   'top_avg': 2},\n",
-       "  '2': {'bonus': 4,\n",
-       "   'bonus_min': '1',\n",
-       "   'bonus_max': '3',\n",
-       "   'bonus_avg': 2,\n",
-       "   'top': 2,\n",
-       "   'top_min': '1',\n",
-       "   'top_max': '3',\n",
-       "   'top_avg': 2},\n",
-       "  '3': {'bonus': 5,\n",
-       "   'bonus_min': '1',\n",
-       "   'bonus_max': '3',\n",
-       "   'bonus_avg': 1.8,\n",
-       "   'top': 5,\n",
-       "   'top_min': '2',\n",
-       "   'top_max': '3',\n",
-       "   'top_avg': 2.8},\n",
-       "  '4': {'bonus': 6,\n",
-       "   'bonus_min': '1',\n",
-       "   'bonus_max': '8',\n",
-       "   'bonus_avg': 2.8,\n",
-       "   'top': 1,\n",
-       "   'top_min': '4',\n",
-       "   'top_max': '4',\n",
-       "   'top_avg': 4}},\n",
-       " 'dr_statistic': 1463092016,\n",
-       " 'see_also': [{'name': 'Ranking after IFSC Climbing Worldcup (B) - Meiringen (SUI) 2017 ',\n",
-       "   'url': 'https://www.ifsc-climbing.org/index.php/world-competition#!type=ranking&cat=5&comp=6158'},\n",
-       "  {'name': 'IFSC Climbing Worldcup 2017 after IFSC Climbing Worldcup (B) - Meiringen (SUI) 2017 ',\n",
-       "   'url': 'https://www.ifsc-climbing.org/index.php/world-competition#!type=ranking&cat=5&cup=574&comp=6158'}],\n",
-       " 'categorys': [{'GrpId': '6', 'route_order': '3', 'name': 'M E N bouldering'},\n",
-       "  {'GrpId': '5', 'route_order': '3', 'name': 'W O M E N bouldering'}],\n",
-       " 'etag': '\"82fa8b0533c1c09f638f16a929fa877f\"',\n",
-       " 'expires': 5}"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "url = 'http://egw.ifsc-climbing.org/egw/ranking/json.php?'\n",
-    "competition_id = competition_ids[-15]\n",
-    "category = 5\n",
-    "route = 3\n",
-    "\n",
-    "# competitions = {competition_id:}\n",
-    "\n",
-    "# Adding competition, category and route to url\n",
-    "url = url + 'comp=' + str(competition) + '&cat=' + str(category) + '&route=' + str(route)\n",
-    "url\n",
-    "comp_json = requests.get(url).json()\n",
-    "comp_json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'http://egw.ifsc-climbing.org/egw/ranking/json.php?comp=6158&cat=5&route=3'"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "url"
    ]
   }
  ],
