--- a/Competition Results.ipynb
+++ b/Competition Results.ipynb
@@ -2,120 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>compId</th>\n",
-       "      <th>dateEnd</th>\n",
-       "      <th>dateStart</th>\n",
-       "      <th>hostNation</th>\n",
-       "      <th>longCompName</th>\n",
-       "      <th>menBouldering</th>\n",
-       "      <th>menLead</th>\n",
-       "      <th>menSpeed</th>\n",
-       "      <th>openComp</th>\n",
-       "      <th>otherCategory</th>\n",
-       "      <th>shortCompName</th>\n",
-       "      <th>womenBouldering</th>\n",
-       "      <th>womenLead</th>\n",
-       "      <th>womenSpeed</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>7923</td>\n",
-       "      <td>2019-04-06</td>\n",
-       "      <td>2019-04-05</td>\n",
-       "      <td>SUI</td>\n",
-       "      <td>IFSC Climbing Worldcup (B) - Meiringen (SUI) 2...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>MeiringenWC</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  compId     dateEnd   dateStart hostNation  \\\n",
-       "3   7923  2019-04-06  2019-04-05        SUI   \n",
-       "\n",
-       "                                        longCompName  menBouldering  menLead  \\\n",
-       "3  IFSC Climbing Worldcup (B) - Meiringen (SUI) 2...            1.0      NaN   \n",
-       "\n",
-       "   menSpeed openComp  otherCategory shortCompName  womenBouldering  womenLead  \\\n",
-       "3       NaN        0            1.0   MeiringenWC              1.0        NaN   \n",
-       "\n",
-       "   womenSpeed  \n",
-       "3         NaN  "
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all().",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-16-c39069fd504a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mcompetition_id\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'7923'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[1;32mif\u001b[0m \u001b[0mcompetition_overview_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcompetition_overview_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'compId'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mcompetition_id\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'isBoulderingComp'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mcategory\u001b[0m \u001b[1;32min\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'5'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'6'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m         \u001b[0mdf_category\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mclimbing_category\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcategory\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mE:\\Data\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__nonzero__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1476\u001b[0m         raise ValueError(\"The truth value of a {0} is ambiguous. \"\n\u001b[0;32m   1477\u001b[0m                          \u001b[1;34m\"Use a.empty, a.bool(), a.item(), a.any() or a.all().\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1478\u001b[1;33m                          .format(self.__class__.__name__))\n\u001b[0m\u001b[0;32m   1479\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1480\u001b[0m     \u001b[0m__bool__\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m__nonzero__\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all()."
+     ]
     }
    ],
    "source": [
-    "import requests\n",
-    "import pandas as pd\n",
-    "from all_comps import climbing_category, competition_overview_df\n",
+    "# import requests\n",
+    "# import pandas as pd\n",
+    "# from all_comps import climbing_category, competition_overview_df\n",
+    "import all_comps\n",
     "\n",
-    "# for stage in stages:\n",
-    "url = 'http://egw.ifsc-climbing.org/egw/ranking/json.php?'\n",
+    "# for comp in competition_overview_df:\n",
+    "base_url = 'http://egw.ifsc-climbing.org/egw/ranking/json.php?'\n",
+    "# competition_id = comp['compId']\n",
     "competition_id = '7923'\n",
-    "category = '5'\n",
-    "stage = 1\n",
     "\n",
-    "# Adding competition, category and route to url\n",
-    "# if category =='5' or category == '6':\n",
-    "url = url + 'comp=' + competition_id + '&cat=' + category + '&route=' + str(stage)\n",
-    "comp_json = requests.get(url).json()\n",
+    "if competition_overview_df[competition_overview_df['compId'] == competition_id]['isBoulderingComp'] == 1:    \n",
+    "    for category in ['5', '6']:\n",
+    "        df_category = climbing_category(category)\n",
     "\n",
-    "competition_overview_df[competition_overview_df['compId'] == competition_id]\n",
+    "        for stage in ['0', '1', '2', '3']:\n",
+    "            df_stage = competition_stage(stage)\n",
     "\n",
-    "# These ones should definitely be in the overall dataframe, not the climbers one    \n",
-    "    # TODO: Add these directly to the overall competition dataframe\n",
-    "    #     'isoOpen': comp_json.get('route_iso_open'),\n",
-    "    #     'isoClose': comp_json.get('route_iso_close'),\n",
-    "    #     'stageStart': comp_json.get('route_start'),\n",
-    "    #     'numProblems': comp_json.get('route_num_problems'),\n",
-    "    #     'climbingTime': comp_json.get('route_climbing_time'),\n",
+    "            url = base_url + 'comp=' + competition_id + '&cat=' + category + '&route=' + stage\n",
+    "            comp_json = requests.get(url).json()\n",
     "\n",
+    "            # Adding stage information to main competition overview dataframe\n",
+    "            competition_overview_df.loc[competition_overview_df['compId'] == competition_id, 'isoOpen' + df_stage + df_category] = comp_json.get('route_iso_open')\n",
+    "            competition_overview_df.loc[competition_overview_df['compId'] == competition_id, 'isoClose' + df_stage + df_category] = comp_json.get('route_iso_close')\n",
+    "            competition_overview_df.loc[competition_overview_df['compId'] == competition_id, 'stageStart' + df_stage + df_category] = comp_json.get('route_start')\n",
+    "            competition_overview_df.loc[competition_overview_df['compId'] == competition_id, 'numProblems' + df_stage + df_category] = comp_json.get('route_num_problems')\n",
+    "            competition_overview_df.loc[competition_overview_df['compId'] == competition_id, 'climbingTime' + df_stage + df_category] = comp_json.get('route_climbing_time')\n",
     "\n",
+    "# competition_overview_df\n",
     "# comp_json\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,19 +89,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def competition_stage(stage):\n",
-    "    stages = {\n",
+    "def competition_stage(stage, intext=1):\n",
+    "    external_stages = {\n",
     "        '-1': 'General result',\n",
     "        '0': '1. Qualification',\n",
     "        '1': '2. Qualification',\n",
     "        '2': 'Semi-Final',\n",
     "        '3': 'Final'\n",
     "    }\n",
-    "    return stages.get(stage, 'Other')"
+    "    df_stages = {\n",
+    "        '0': 'Q1',\n",
+    "        '1': 'Q2',\n",
+    "        '2': 'SF',\n",
+    "        '3': 'F'\n",
+    "    }\n",
+    "    return df_stages.get(stage, 'Other') if intext == 1 else external_stages.get(stage, 'Other')"
    ]
   }
  ],
