Starting the stage results

--- a/Competition Results.ipynb
+++ b/Competition Results.ipynb
@@ -2,57 +2,209 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all().",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-16-c39069fd504a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mcompetition_id\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'7923'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[1;32mif\u001b[0m \u001b[0mcompetition_overview_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcompetition_overview_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'compId'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mcompetition_id\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'isBoulderingComp'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mcategory\u001b[0m \u001b[1;32min\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'5'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'6'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m         \u001b[0mdf_category\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mclimbing_category\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcategory\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mE:\\Data\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__nonzero__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1476\u001b[0m         raise ValueError(\"The truth value of a {0} is ambiguous. \"\n\u001b[0;32m   1477\u001b[0m                          \u001b[1;34m\"Use a.empty, a.bool(), a.item(), a.any() or a.all().\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1478\u001b[1;33m                          .format(self.__class__.__name__))\n\u001b[0m\u001b[0;32m   1479\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1480\u001b[0m     \u001b[0m__bool__\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m__nonzero__\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all()."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# import requests\n",
-    "# import pandas as pd\n",
-    "# from all_comps import climbing_category, competition_overview_df\n",
-    "import all_comps\n",
+    "from all_comps import climbing_category, competition_overview_df, pd, np, requests\n",
     "\n",
-    "# for comp in competition_overview_df:\n",
-    "base_url = 'http://egw.ifsc-climbing.org/egw/ranking/json.php?'\n",
-    "# competition_id = comp['compId']\n",
-    "competition_id = '7923'\n",
+    "# Creating a stage_results dataframe\n",
+    "stage_results_df = pd.DataFrame()\n",
     "\n",
-    "if competition_overview_df[competition_overview_df['compId'] == competition_id]['isBoulderingComp'] == 1:    \n",
-    "    for category in ['5', '6']:\n",
-    "        df_category = climbing_category(category)\n",
+    "# Complete competition_overview_df with added information.\n",
+    "for comp in competition_overview_df.iterrows():\n",
+    "    base_url = 'http://egw.ifsc-climbing.org/egw/ranking/json.php?'\n",
+    "    competition_id = comp[1]['compId']\n",
+    "#     competition_id = '7923'\n",
     "\n",
-    "        for stage in ['0', '1', '2', '3']:\n",
-    "            df_stage = competition_stage(stage)\n",
+    "    if comp[1]['isBoulderingComp'] == 1:\n",
+    "        # Men and women bouldering\n",
+    "        for category in ['5', '6']:\n",
+    "            df_category = climbing_category(category)\n",
     "\n",
-    "            url = base_url + 'comp=' + competition_id + '&cat=' + category + '&route=' + stage\n",
-    "            comp_json = requests.get(url).json()\n",
+    "            # Both qualies, semi-finals and finals \n",
+    "            for stage in ['0', '1', '2', '3']:\n",
+    "                df_stage = competition_stage(stage)\n",
     "\n",
-    "            # Adding stage information to main competition overview dataframe\n",
-    "            competition_overview_df.loc[competition_overview_df['compId'] == competition_id, 'isoOpen' + df_stage + df_category] = comp_json.get('route_iso_open')\n",
-    "            competition_overview_df.loc[competition_overview_df['compId'] == competition_id, 'isoClose' + df_stage + df_category] = comp_json.get('route_iso_close')\n",
-    "            competition_overview_df.loc[competition_overview_df['compId'] == competition_id, 'stageStart' + df_stage + df_category] = comp_json.get('route_start')\n",
-    "            competition_overview_df.loc[competition_overview_df['compId'] == competition_id, 'numProblems' + df_stage + df_category] = comp_json.get('route_num_problems')\n",
-    "            competition_overview_df.loc[competition_overview_df['compId'] == competition_id, 'climbingTime' + df_stage + df_category] = comp_json.get('route_climbing_time')\n",
-    "\n",
+    "                url = base_url + 'comp=' + competition_id + '&cat=' + category + '&route=' + stage\n",
+    "                response = requests.get(url)\n",
+    "                \n",
+    "                # Checking if the url returns a value (for the comps that don't have the same format)\n",
+    "                if response.status_code != 200:\n",
+    "                    continue\n",
+    "                comp_json = response.json()\n",
+    "                \n",
+    "                # Adding stage information to main competition overview dataframe\n",
+    "                competition_overview_df.loc[competition_overview_df['compId'] == competition_id, 'isoOpen' + df_stage + df_category] = comp_json.get('route_iso_open')\n",
+    "                competition_overview_df.loc[competition_overview_df['compId'] == competition_id, 'isoClose' + df_stage + df_category] = comp_json.get('route_iso_close')\n",
+    "                competition_overview_df.loc[competition_overview_df['compId'] == competition_id, 'stageStart' + df_stage + df_category] = comp_json.get('route_start')\n",
+    "                competition_overview_df.loc[competition_overview_df['compId'] == competition_id, 'numProblems' + df_stage + df_category] = comp_json.get('route_num_problems')\n",
+    "                competition_overview_df.loc[competition_overview_df['compId'] == competition_id, 'climbingTime' + df_stage + df_category] = comp_json.get('route_climbing_time')\n",
+    "                \n",
+    "                stage_results_df.append(get_stage_results(comp_json), ignore_index=True)\n",
     "# competition_overview_df\n",
     "# comp_json\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>boulder1</th>\n",
+       "      <th>boulder2</th>\n",
+       "      <th>boulder3</th>\n",
+       "      <th>boulder4</th>\n",
+       "      <th>boulder5</th>\n",
+       "      <th>category</th>\n",
+       "      <th>climberID</th>\n",
+       "      <th>compId</th>\n",
+       "      <th>rankAfterStage</th>\n",
+       "      <th>stage</th>\n",
+       "      <th>startOrder</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>t5 b1</td>\n",
+       "      <td>b0</td>\n",
+       "      <td>t1 b1</td>\n",
+       "      <td>t3 b3</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Men</td>\n",
+       "      <td>5781</td>\n",
+       "      <td>983</td>\n",
+       "      <td>1</td>\n",
+       "      <td>F</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>t1 b1</td>\n",
+       "      <td>b0</td>\n",
+       "      <td>t3 b1</td>\n",
+       "      <td>b0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Men</td>\n",
+       "      <td>2602</td>\n",
+       "      <td>983</td>\n",
+       "      <td>2</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>b1</td>\n",
+       "      <td>b0</td>\n",
+       "      <td>t1 b1</td>\n",
+       "      <td>b0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Men</td>\n",
+       "      <td>2787</td>\n",
+       "      <td>983</td>\n",
+       "      <td>3</td>\n",
+       "      <td>F</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>b1</td>\n",
+       "      <td>b0</td>\n",
+       "      <td>t3 b1</td>\n",
+       "      <td>b0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Men</td>\n",
+       "      <td>6096</td>\n",
+       "      <td>983</td>\n",
+       "      <td>4</td>\n",
+       "      <td>F</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>b6</td>\n",
+       "      <td>b0</td>\n",
+       "      <td>t4 b1</td>\n",
+       "      <td>b0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Men</td>\n",
+       "      <td>6933</td>\n",
+       "      <td>983</td>\n",
+       "      <td>5</td>\n",
+       "      <td>F</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>b1</td>\n",
+       "      <td>b0</td>\n",
+       "      <td>t5 b2</td>\n",
+       "      <td>b0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Men</td>\n",
+       "      <td>6489</td>\n",
+       "      <td>983</td>\n",
+       "      <td>6</td>\n",
+       "      <td>F</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  boulder1 boulder2 boulder3 boulder4 boulder5 category climberID compId  \\\n",
+       "0    t5 b1       b0    t1 b1    t3 b3     None      Men      5781    983   \n",
+       "1    t1 b1       b0    t3 b1       b0     None      Men      2602    983   \n",
+       "2       b1       b0    t1 b1       b0     None      Men      2787    983   \n",
+       "3       b1       b0    t3 b1       b0     None      Men      6096    983   \n",
+       "4       b6       b0    t4 b1       b0     None      Men      6933    983   \n",
+       "5       b1       b0    t5 b2       b0     None      Men      6489    983   \n",
+       "\n",
+       "  rankAfterStage stage startOrder  \n",
+       "0              1     F          3  \n",
+       "1              2     F          1  \n",
+       "2              3     F          6  \n",
+       "3              4     F          5  \n",
+       "4              5     F          4  \n",
+       "5              6     F          2  "
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = 'http://egw.ifsc-climbing.org/egw/ranking/json.php?comp=7923&cat=6&route=3'\n",
+    "stage_results_df.append(get_stage_results(requests.get(url).json()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
